
option(ENABLE_ACIS "Enable ACIS geometry kernel interface" OFF)
option(ENABLE_PARASOLID "Enable Parasolid geometry kernel interface" ON)

macro(set_config_option_parent VARNAME STRING)
  set(${VARNAME} TRUE)
  set(CONFIG_OPTIONS "${CONFIG_OPTIONS} ${STRING}" PARENT_SCOPE)
  message(STATUS "Found " ${STRING})
endmacro()

macro(append_gmsh_pro_src DIRNAME FILES)
  foreach(FILE ${FILES})
    list(APPEND LIST ${DIRNAME}/${FILE})
  endforeach()
  set(GMSH_PRO_SRC ${GMSH_PRO_SRC};${LIST} PARENT_SCOPE)
endmacro()

if(ENABLE_ACIS)
  find_library(ACIS_LIB SpaACIS PATH_SUFFIXES bin/maci386)
  if(ACIS_LIB)
    find_path(ACIS_INC "kernapi.hxx" PATH_SUFFIXES include)
    if(ACIS_INC)
      set_config_option_parent(HAVE_ACIS "Acis")
      list(APPEND EXTERNAL_LIBRARIES ${ACIS_LIB})
      list(APPEND EXTERNAL_INCLUDES ${ACIS_INC})
      add_subdirectory(ACIS)
      include_directories(ACIS)
    endif()
  endif()
endif()

if(ENABLE_PARASOLID)
  find_library(PARASOLID_LIB pskernel HINTS ENV PARASOLID)
  if(PARASOLID_LIB)
    set_config_option_parent(HAVE_PARASOLID "Parasolid")
    add_subdirectory(Parasolid)
    include_directories(Parasolid)
  endif()
endif()

foreach(FILE ${GMSH_PRO_SRC})
  append_gmsh_src(pro "${FILE}")
endforeach()
